Update 3.9.0 Lots of fixes. Schedule now displays shifts on calendar. (Shifts section not working for some reason)

--- a/css/home.css
+++ b/css/home.css
@@ -22,6 +22,8 @@
 body {
   background: #f1efec;
   font-family: "Montserrat";
+  margin: 0;
+  width: 100vw;
 }
 
 button.btn {
